Fixed font sizing and spacing of idea details

--- a/src/pages/idea/Idea.module.scss
+++ b/src/pages/idea/Idea.module.scss
@@ -118,7 +118,8 @@
         font-family: 'tex-bold';
 
         @media screen and (max-width: 768px) {
-            font-size: 0.625rem;
+            // font-size: 0.625rem;
+            font-size: 0.75rem;
         }
     }
     .header + * {
@@ -156,6 +157,7 @@
 
             @media screen and (max-width: 768px) {
                 font-size: 0.5rem;
+                font-size: 0.625rem;
             }
         }
     }
@@ -167,6 +169,8 @@
         @media screen and (max-width: 768px) {
             font-size: 0.5rem;
             margin-bottom: 1rem;
+            letter-spacing: 0.05rem;
+            word-spacing: -0.06rem;
         }
 
         .stat {
